k8s/prytaneum-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prytaneum-client
  name: prytaneum-client
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prytaneum-client
  template:
    metadata:
      labels:
        app: prytaneum-client
    spec:
      containers:
        - name: prytaneum-client
          image: gcr.io/PROJECT_ID/CLIENT_IMAGE:TAG
          imagePullPolicy: IfNotPresent
