k8s/prytaneum-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prytaneum-server
  labels:
    app: prytaneum-server
  namespace: dev
spec:
  selector:
    matchLabels:
      app: prytaneum-server
  replicas: 1
  template:
    metadata:
      labels:
        app: prytaneum-server
    spec:
      containers:
        - name: prytaneum-server
          image: gcr.io/PROJECT_ID/SERVER_IMAGE:TAG
          imagePullPolicy: IfNotPresent
