k8s/prytaneum-server-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: prytaneum-server
  name: prytaneum-server-service
  namespace: production
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3002
  selector:
    app: prytaneum-server
  sessionAffinity: None
  type: LoadBalancer
